tests/rosetta/out/Zig/achilles-numbers.error
zig build: exit status 1
/tmp/achilles-numbers.zig:199:24: error: local variable is never mutated
/tmp/achilles-numbers.zig:199:24: note: consider using 'const'
